--- a/css/desktop.css
+++ b/css/desktop.css
@@ -7,6 +7,13 @@ html, body {
     
     background: #272727;
     color: #f5f5f5;
+    
+    font-family: "Roboto", sans-serif;
+}
+
+.wrapper {
+    height: 100%;
+    width: 100%;
 }
 
 .slide-menu {
@@ -18,9 +25,49 @@ html, body {
     position: fixed;
     
     background: #f5f5f5;
+    color: #616161;
     
     width: 375px;
     height: 100%;
+    
+    transition: all 0.3s ease-in-out;
+    
+    z-index: 99;
+}
+
+.slide-menu.hidden {
+    transform: translateX(-380px);
+    transition: all 0.3s ease-in-out;
+}
+
+.slide-menu > nav {
+    margin: 140px 0 0 40px;
+    
+    list-style: none;
+}
+
+.slide-menu > nav > li {
+    padding-left: 15px;
+    line-height: 50px;
+    height: 50px;
+    border-top: 1px solid #bdbdbd;
+    
+    transition: all 0.1s ease-in-out;
+}
+
+.slide-menu > nav > li:hover {
+    background: #e0e0e0;
+    transition: all 0.1s ease-in-out;
+    cursor: pointer;
+}
+
+.nav-title {
+    font-size: 13px;
+    letter-spacing: 5px;
+    color: #9e9e9e;
+    
+    display: block;
+    margin-bottom: 30px;
 }
 
 .menu-button {
@@ -38,10 +85,12 @@ html, body {
     background-image: linear-gradient(-134deg, #3023AE 0%, #C86DD7 100%);
     box-shadow: 2px 2px 11px 0 #000000;
     transition: all 0.2s ease;
+    
+    z-index: 100;
 }
 
 .menu-button.is-active {
-    box-shadow: 0 0 11px 0 #eeeeee;
+    box-shadow: 1px 1px 11px 0 #646464;
     transition: all 0.2s ease;
 }
 
@@ -55,4 +104,43 @@ html, body {
 
 .hamburger-inner, .hamburger-inner:before, .hamburger-inner:after {
     background: white;
+}
+
+.section-title {
+    width: 33px;
+    height: 100vh;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 28px;
+    display: block;
+    z-index: 10;
+    will-change: transform;
+}
+
+.section-title > span {
+    display: block;
+    position: absolute;
+    width: 300px;
+    bottom: 175px;
+    left: 50%;
+    color: #fff;
+    text-transform: uppercase;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 2.8em;
+    line-height: 1;
+    transform: translateX(-50%) rotate(-90deg);
+}
+
+.section-title.fixed {
+    position: fixed
+}
+
+.section-title.bottom {
+    top: auto;
+    bottom: 0
+}
+
+section {
+    min-height: 100%;
 }
