--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,37 +1,39 @@
 html, body {
     margin: 0;
     padding: 0;
-    
+
     width: 100%;
     height: 100%;
-    
-    background: #272727;
+
+    background: #272727 url(../test.svg) no-repeat center center;
+    background-size: 90% 90%;
     color: #f5f5f5;
-    
-    font-family: "Roboto", sans-serif;
+
+    font-family: "Roboto", sans-serif;  
 }
 
 .wrapper {
     height: 100%;
     width: 100%;
+    position: relative;
 }
 
 .slide-menu {
     top: 0;
     bottom: 0;
     left: 0;
-    
+
     float: left;
     position: fixed;
-    
+
     background: #f5f5f5;
     color: #616161;
-    
+
     width: 375px;
     height: 100%;
-    
+
     transition: all 0.3s ease-in-out;
-    
+
     z-index: 99;
 }
 
@@ -42,7 +44,7 @@ html, body {
 
 .slide-menu > nav {
     margin: 140px 0 0 40px;
-    
+
     list-style: none;
 }
 
@@ -51,7 +53,7 @@ html, body {
     line-height: 50px;
     height: 50px;
     border-top: 1px solid #bdbdbd;
-    
+
     transition: all 0.1s ease-in-out;
 }
 
@@ -65,7 +67,7 @@ html, body {
     font-size: 13px;
     letter-spacing: 5px;
     color: #9e9e9e;
-    
+
     display: block;
     margin-bottom: 30px;
 }
@@ -73,19 +75,19 @@ html, body {
 .menu-button {
     top: 25px;
     left: 25px;
-    
+
     float: left;
     position: fixed;
-    
+
     width: 62px;
     height: 62px;
-    
+
     border-radius: 31px;
-    
-    background-image: linear-gradient(-134deg, #3023AE 0%, #C86DD7 100%);
+
+    background-image: linear-gradient(134deg, #3023AE 0%, #C86DD7 100%);
     box-shadow: 2px 2px 11px 0 #000000;
-    transition: all 0.2s ease;
-    
+    transition: all 0.7s ease;
+
     z-index: 100;
 }
 
@@ -98,7 +100,7 @@ html, body {
     margin: 4px 0 0 -4px;
     transform: scale(0.75);
     color: white;
-    
+
     outline: none;
 }
 
@@ -121,8 +123,8 @@ html, body {
 .section-title > span {
     display: block;
     position: absolute;
-    width: 300px;
-    bottom: 175px;
+    width: 500px;
+    bottom: 250px;
     left: 50%;
     color: #fff;
     text-transform: uppercase;
@@ -132,15 +134,30 @@ html, body {
     transform: translateX(-50%) rotate(-90deg);
 }
 
-.section-title.fixed {
-    position: fixed
-}
-
-.section-title.bottom {
-    top: auto;
-    bottom: 0
+.section-title > span > span {
+    font-weight: 300;
+    opacity: 0.5;
 }
 
 section {
     min-height: 100%;
+    position: relative;
+}
+
+.fixed {
+    position: fixed;
+}
+
+.bottom {
+    top: auto;
+    bottom: 0;
+}
+
+#test {
+    width: 921px;
+    height: 382px;
+    background: url(../test2.svg) no-repeat;
+    
+    margin-top: 250px;
+    margin-left: 150px;
 }
