--- a/css/desktop.css
+++ b/css/desktop.css
@@ -18,6 +18,15 @@ html, body {
     position: relative;
 }
 
+.site-title {
+    font-family: "Futura";
+    text-transform: uppercase;
+    font-size: 36px;
+    float: right;
+    margin-right: 25px;
+    margin-top: 21px;
+}
+
 .slide-menu {
     top: 0;
     bottom: 0;
