--- a/css/desktop.css
+++ b/css/desktop.css
@@ -137,8 +137,8 @@ html, body {
     left: 50%;
     color: #fff;
     text-transform: uppercase;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 2.8em;
+    font-family: "Futura", sans-serif;
+    font-size: 36px;
     line-height: 1;
     transform: translateX(-50%) rotate(-90deg);
 }
