--- a/css/desktop.css
+++ b/css/desktop.css
@@ -37,6 +37,7 @@ html, body {
 
     background: #f5f5f5;
     color: #616161;
+    box-shadow: -16px 0px 48px 24px rgba(0,0,0,0.75);
 
     width: 375px;
     height: 100%;
@@ -49,6 +50,7 @@ html, body {
 .slide-menu.hidden {
     transform: translateX(-380px);
     transition: all 0.3s ease-in-out;
+    box-shadow: none;
 }
 
 .slide-menu > nav {
