--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,7 +5,7 @@ html, body {
     width: 100%;
     height: 100%;
 
-    background: #272727 url(../test.svg) no-repeat center center;
+    background: #191919 url(../test.svg) no-repeat center center;
     background-size: 90% 90%;
     color: #f5f5f5;
 
@@ -174,4 +174,11 @@ section {
     
     margin-top: 250px;
     margin-left: 150px;
+}
+
+.social-icons {
+    position: fixed;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
 }
