--- a/css/desktop.css
+++ b/css/desktop.css
@@ -177,8 +177,13 @@ section {
 }
 
 .social-icons {
+    opacity: 0.7;
     position: fixed;
-    right: 0;
+    right: 25px;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.social-icons > div {
+    margin-bottom: 16px;
 }
