--- a/css/desktop.css
+++ b/css/desktop.css
@@ -22,6 +22,7 @@ html, body {
     font-family: "Futura";
     text-transform: uppercase;
     font-size: 36px;
+    color: #ffffff;
     
     float: right;
     margin: 21px 25px 0 0;
@@ -186,4 +187,14 @@ section {
 
 .social-icons > div {
     margin-bottom: 16px;
+}
+
+/* --- PAGES --- */
+
+#about {
+    background: #f5f5f5;
+}
+
+#about > .section-title > span {
+    color: #424242;
 }
