--- a/css/desktop.css
+++ b/css/desktop.css
@@ -5,11 +5,10 @@ html, body {
     width: 100%;
     height: 100%;
 
-    background: #191919 url(../test.svg) no-repeat center center;
-    background-size: 90% 90%;
+    background: #191919;
     color: #f5f5f5;
 
-    font-family: "Roboto", sans-serif;  
+    font-family: "Futura", sans-serif;  
 }
 
 .wrapper {
@@ -21,11 +20,28 @@ html, body {
 .site-title {
     font-family: "Futura";
     text-transform: uppercase;
-    font-size: 36px;
+    font-size: 42px;
     color: #ffffff;
-    
+
+    position: relative;
     float: right;
-    margin: 21px 25px 0 0;
+
+    background: #f5f5f5;
+    width: 180px;
+    height: 470px;
+    margin-right: 170px;
+}
+
+.site-title > span {
+    transform:  translateX(-50%) rotate(-90deg);
+    color: #191919;
+    position: absolute;
+    display: block;
+    bottom: 170px;
+    left: 50%;
+    margin-left: 40px;
+    
+    white-space: nowrap;
 }
 
 .slide-menu {
@@ -124,10 +140,10 @@ html, body {
     left: 28px;
     width: 33px;
     height: 100vh;
-    
+
     position: absolute;
     display: block;
-    
+
     z-index: 10;
     will-change: transform;
 }
@@ -136,12 +152,12 @@ html, body {
     bottom: 250px;
     left: 50%;
     width: 500px;
-    
+
     display: block;
     position: absolute;
-    
+
     color: #ffffff;
-    
+
     font-family: "Futura", sans-serif;
     text-transform: uppercase;
     font-size: 36px;
@@ -168,13 +184,8 @@ section {
     bottom: 0;
 }
 
-#test {
-    width: 921px;
-    height: 382px;
-    background: url(../test2.svg) no-repeat;
-    
-    margin-top: 250px;
-    margin-left: 150px;
+h1 {
+    margin: 0;
 }
 
 /* --- PAGES --- */
