--- a/css/desktop.css
+++ b/css/desktop.css
@@ -30,6 +30,8 @@ html, body {
     width: 180px;
     height: 470px;
     margin-right: 170px;
+
+    z-index: 100;
 }
 
 .site-title > span {
@@ -40,7 +42,7 @@ html, body {
     bottom: 170px;
     left: 50%;
     margin-left: 40px;
-    
+
     white-space: nowrap;
 }
 
@@ -189,6 +191,106 @@ h1 {
 }
 
 /* --- PAGES --- */
+
+#home > .content {
+    margin-left: 200px;
+    padding-top: 185px;
+    width: 600px;
+}
+
+#home > .content h1 {
+    font-weight: 400;
+    font-size: 275px;
+    background: linear-gradient(134deg, #0044FF 0%, #DD0000 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    z-index: 0;
+    display: inline-block;
+}
+
+#home > .content > .inner-content {
+    margin: -50px 0 0 25px;
+}
+
+#home > .content p {
+    font-size: 17px;
+    font-weight: lighter;
+    color: #d8d8d8;
+}
+
+.col-2 {
+    display: flex; 
+}
+
+.col-2 > div {
+    flex: 1;
+}
+
+.col-2.fit-content {
+    justify-content: flex-start;
+}
+
+.col-2.fit-content div {
+    flex: 0;
+}
+
+.col-2.v-align {
+    align-items: center;
+}
+
+.col-2 > div:nth-child(2) {
+    padding-left: 20px;
+}
+
+.green-emphasis {
+    background: linear-gradient(90deg, #B4EC51 0%, #06A7EF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    z-index: 0;
+    display: inline-block;
+}
+
+button.ui-button {
+    width: 130px;
+    height: 40px;
+    box-shadow: 0 2px 4px 0 #000000;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 13px;
+    padding-top: 3px;
+}
+
+button.pink-red {
+    background: linear-gradient(162deg, #C851F5 0%, #9F041B 100%);
+    color: white;
+}
+
+button.pink-red:hover {
+    opacity: 0.8;
+}
+
+p.d-element {
+    margin: 0;
+}
+
+.space {
+    display: block;
+    height: 20px;
+}
+
+.subtle {
+    margin-top: 0;
+    font-size: 13px !important;
+    color: #868686 !important;
+}
+
+.nowrap {
+    white-space: nowrap;
+}
 
 #about {
     background: #f5f5f5;
