--- a/css/desktop.css
+++ b/css/desktop.css
@@ -258,23 +258,30 @@ button.ui-button {
     width: 130px;
     height: 40px;
     box-shadow: 0 2px 4px 0 #000000;
-    border-radius: 8px;
+    border-radius: 7px;
     border: none;
     outline: none;
     cursor: pointer;
     font-family: 'Futura', sans-serif;
     letter-spacing: 0.5px;
     font-size: 15px;
-    padding-top: 3px;
+    padding-top: 2px;
 }
 
 button.pink-red {
-    background: linear-gradient(162deg, #C851F5 0%, #9F041B 100%);
+    background: linear-gradient(162deg, rgba(200, 81, 245, 1) 0%, rgba(159, 4, 27, 1) 100%);
     color: white;
+    transition: all 0.2s ease;
 }
 
 button.pink-red:hover {
-    opacity: 0.8;
+    background: linear-gradient(162deg, rgba(200, 81, 245, 0.8) 0%, rgba(159, 4, 27, 0.8) 100%);
+    transition: all 0.2s ease;
+}
+
+button.pink-red:active {
+    background: linear-gradient(162deg, rgba(159, 4, 27, 0.8) 0%, rgba(200, 81, 245, 0.8) 100%);
+    color: #bdbdbd;
 }
 
 p.d-element {
