--- a/css/desktop.css
+++ b/css/desktop.css
@@ -32,6 +32,7 @@ html, body {
     width: 180px;
     height: 470px;
     margin-right: 170px;
+    transition: all 0.3s ease;
 
     z-index: 100;
 }
@@ -58,7 +59,7 @@ html, body {
 
     background: #f5f5f5;
     color: #616161;
-    box-shadow: -16px 0px 48px 24px rgba(0,0,0,0.75);
+    box-shadow: -16px 0px 28px 24px rgba(0,0,0,0.75);
 
     width: 375px;
     height: 100%;
@@ -115,6 +116,7 @@ html, body {
     height: 62px;
 
     border-radius: 31px;
+    box-shadow: 1px 1px 11px 0 #000000;
 
     background-image: linear-gradient(134deg, #3023AE 0%, #C86DD7 100%);
     transition: all 0.7s ease;
@@ -141,8 +143,8 @@ html, body {
 
 .section-title {
     top: 0;
-    left: 28px;
-    width: 33px;
+    left: 10px;
+    width: 63px;
     height: 100vh;
 
     position: absolute;
@@ -200,6 +202,7 @@ h1 {
     padding: 40px;
     width: 600px;
     background: #191919;
+    transition: all 0.3s ease;
 }
 
 #home > .content h1 {
@@ -275,13 +278,14 @@ button.pink-red {
 }
 
 button.pink-red:hover {
-    background: linear-gradient(162deg, rgba(200, 81, 245, 0.8) 0%, rgba(159, 4, 27, 0.8) 100%);
+    background: linear-gradient(162deg, rgba(200, 81, 245, 0.9) 0%, rgba(159, 4, 27, 0.9) 100%);
     transition: all 0.2s ease;
+    box-shadow: 0 2px 10px 0 #000000;
 }
 
 button.pink-red:active {
     background: linear-gradient(162deg, rgba(159, 4, 27, 0.8) 0%, rgba(200, 81, 245, 0.8) 100%);
-    color: #bdbdbd;
+    color: #e0e0e0;
 }
 
 p.d-element {
@@ -296,13 +300,17 @@ p.d-element {
 #home {
     background: url(../res/svg/hero_back.svg);
     background-size: 1000px;
-    background-position: top;
+    background-position: right;
 }
 
 #home .subtle {
     margin-top: 0;
     font-size: 15px !important;
     color: #868686 !important;
+}
+
+#home > .section-title {
+    background: #191919;
 }
 
 .nowrap {
@@ -315,4 +323,34 @@ p.d-element {
 
 #about > .section-title > span {
     color: #424242;
+}
+
+@media screen and (max-height: 740px) {
+    #home > .content {
+        margin-top: 10px !important;
+        padding-top: 10px;
+        transition: all 0.3s ease;
+    }
+}
+
+@media screen and (max-height: 840px) {
+    .site-title {
+        height: 440px;
+    }
+    
+    #home > .content {
+        margin-top: 80px;
+        transition: all 0.3s ease;
+    }
+}
+
+@media screen and (max-width: 935px) {
+    .site-title {
+        margin-right: 30px;
+        transition: all 0.3s ease;
+    }
+    
+    #home > .content {
+        margin-left: 60px;
+    }
 }
