--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,3 +1,5 @@
+/* --- CORE LAYOUT --- */
+
 html, body {
     margin: 0;
     padding: 0;
@@ -19,35 +21,7 @@ html, body {
     position: relative;
 }
 
-.site-title {
-    font-family: "Futura";
-    text-transform: uppercase;
-    font-size: 42px;
-    color: #ffffff;
-
-    position: relative;
-    float: right;
-
-    background: #e0e0e0;
-    width: 180px;
-    height: 470px;
-    margin-right: 170px;
-    transition: all 0.3s ease;
-
-    z-index: 100;
-}
-
-.site-title > span {
-    transform:  translateX(-50%) rotate(-90deg);
-    color: #191919;
-    position: absolute;
-    display: block;
-    bottom: 170px;
-    left: 50%;
-    margin-left: 40px;
-
-    white-space: nowrap;
-}
+/* --- SIDE MENU --- */
 
 .slide-menu {
     top: 0;
@@ -86,7 +60,7 @@ html, body {
     display: block;
     text-decoration: none;
     color: inherit;
-    
+
     line-height: 50px;
     height: 50px;
     border-top: 1px solid #bdbdbd;
@@ -150,6 +124,8 @@ html, body {
     background: white;
 }
 
+/* --- PAGE SECIONS --- */
+
 .section-title {
     top: 0;
     left: 10px;
@@ -199,8 +175,52 @@ section {
     bottom: 0;
 }
 
+/* --- CORE TYPEFACES / UI DEFAULT ELEMENTS --- */
+
 h1 {
-    margin: 0;
+
+}
+
+button.ui-button {
+    width: 130px;
+    height: 40px;
+    padding-top: 2px;
+    
+    box-shadow: 0 2px 4px 0 #000000;
+    border-radius: 7px;
+    border: none;
+    
+    outline: none;
+    cursor: pointer;
+    
+    font-family: 'Futura', sans-serif;
+    letter-spacing: 0.5px;
+    font-size: 15px;
+}
+
+button.pink-red {
+    background: linear-gradient(162deg, rgba(200, 81, 245, 1) 0%, rgba(159, 4, 27, 1) 100%);
+    color: white;
+    transition: all 0.2s ease;
+}
+
+button.pink-red:hover {
+    background: linear-gradient(162deg, rgba(200, 81, 245, 0.9) 0%, rgba(159, 4, 27, 0.9) 100%);
+    transition: all 0.2s ease;
+    box-shadow: 0 2px 10px 0 #000000;
+}
+
+button.pink-red:active {
+    background: linear-gradient(162deg, rgba(200, 81, 245, 0.7) 0%, rgba(159, 4, 27, 0.7) 100%);
+    color: #e0e0e0;
+}
+
+.green-emphasis {
+    background: linear-gradient(90deg, #B4EC51 0%, #06A7EF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    z-index: 0;
+    display: inline-block;
 }
 
 /* --- PAGES --- */
@@ -215,6 +235,7 @@ h1 {
 }
 
 #home > .content h1 {
+    margin: 0;
     font-weight: 400;
     font-size: 288px;
     background: linear-gradient(134deg, #0044FF 0%, #DD0000 100%);
@@ -233,6 +254,8 @@ h1 {
     font-weight: lighter;
     color: #e0e0e0;
 }
+
+/* --- FLEXIBLE LAYOUTS --- */
 
 .col-2 {
     display: flex; 
@@ -258,44 +281,6 @@ h1 {
     padding-left: 20px;
 }
 
-.green-emphasis {
-    background: linear-gradient(90deg, #B4EC51 0%, #06A7EF 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    z-index: 0;
-    display: inline-block;
-}
-
-button.ui-button {
-    width: 130px;
-    height: 40px;
-    box-shadow: 0 2px 4px 0 #000000;
-    border-radius: 7px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-family: 'Futura', sans-serif;
-    letter-spacing: 0.5px;
-    font-size: 15px;
-    padding-top: 2px;
-}
-
-button.pink-red {
-    background: linear-gradient(162deg, rgba(200, 81, 245, 1) 0%, rgba(159, 4, 27, 1) 100%);
-    color: white;
-    transition: all 0.2s ease;
-}
-
-button.pink-red:hover {
-    background: linear-gradient(162deg, rgba(200, 81, 245, 0.9) 0%, rgba(159, 4, 27, 0.9) 100%);
-    transition: all 0.2s ease;
-    box-shadow: 0 2px 10px 0 #000000;
-}
-
-button.pink-red:active {
-    background: linear-gradient(162deg, rgba(159, 4, 27, 0.8) 0%, rgba(200, 81, 245, 0.8) 100%);
-    color: #e0e0e0;
-}
 
 p.d-element {
     margin: 0;
@@ -305,6 +290,14 @@ p.d-element {
     display: block;
     height: 20px;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
+
+/* --- PER-PAGE LAYOUTS --- */
+
+/* ==== HOME SECTION ==== */
 
 #home {
     background: url(../res/svg/hero_back.svg) repeat-y;
@@ -322,9 +315,37 @@ p.d-element {
     background: #191919;
 }
 
-.nowrap {
+.site-title {
+    font-family: "Futura";
+    text-transform: uppercase;
+    font-size: 42px;
+    color: #ffffff;
+
+    position: relative;
+    float: right;
+
+    background: #e0e0e0;
+    width: 180px;
+    height: 470px;
+    margin-right: 170px;
+    transition: all 0.3s ease;
+
+    z-index: 100;
+}
+
+.site-title > span {
+    transform:  translateX(-50%) rotate(-90deg);
+    color: #191919;
+    position: absolute;
+    display: block;
+    bottom: 170px;
+    left: 50%;
+    margin-left: 40px;
+
     white-space: nowrap;
 }
+
+/* ==== ABOUT SECTION ==== */
 
 #about {
     background: #f5f5f5;
@@ -333,6 +354,9 @@ p.d-element {
 #about > .section-title > span {
     color: #424242;
 }
+
+
+/* --- LOCAL MEDIA QUERIES (HOME) --- */
 
 @media screen and (max-height: 740px) {
     #home > .content {
@@ -346,7 +370,7 @@ p.d-element {
     .site-title {
         height: 440px;
     }
-    
+
     #home > .content {
         margin-top: 80px;
         transition: all 0.3s ease;
@@ -358,7 +382,7 @@ p.d-element {
         margin-right: 30px;
         transition: all 0.3s ease;
     }
-    
+
     #home > .content {
         margin-left: 60px;
     }
