--- a/css/desktop.css
+++ b/css/desktop.css
@@ -126,6 +126,15 @@ html, body {
 
 /* --- PAGE SECIONS --- */
 
+section {
+    min-height: 10%;
+    position: relative;
+}
+
+section.full {
+    min-height: 100%;
+}
+
 .section-title {
     top: 0;
     left: 10px;
@@ -161,11 +170,6 @@ html, body {
     opacity: 0.5;
 }
 
-section {
-    min-height: 100%;
-    position: relative;
-}
-
 .section-title.fixed {
     position: fixed;
 }
@@ -178,21 +182,48 @@ section {
 /* --- CORE TYPEFACES / UI DEFAULT ELEMENTS --- */
 
 h1 {
+    margin: 0 0 12px 0;
+    font-weight: 300;
+    font-size: 30px;
+}
 
+p.large {
+    font-size: 18px;
+}
+
+p.dim {
+    color: #bdbdbd;
+}
+
+.bright {
+    color: #ffffff;
+}
+
+a {
+	color: #03a9f4;
+
+	font-weight: 600;
+	text-decoration: none;
+	transition: all 0.2s ease;
+}
+
+a:hover {
+	color: #ffffff;
+	transition: all 0.2s ease;
 }
 
 button.ui-button {
     width: 130px;
     height: 40px;
     padding-top: 2px;
-    
+
     box-shadow: 0 2px 4px 0 #000000;
     border-radius: 7px;
     border: none;
-    
+
     outline: none;
     cursor: pointer;
-    
+
     font-family: 'Futura', sans-serif;
     letter-spacing: 0.5px;
     font-size: 15px;
@@ -223,7 +254,119 @@ button.pink-red:active {
     display: inline-block;
 }
 
-/* --- PAGES --- */
+.red {
+   color: #f44336;
+}
+
+.green {
+    color: #4caf50;
+}
+
+.blue {
+    color: #2196f3;
+}
+
+.yellow {
+    color: #ffeb3b;
+}
+
+.orange {
+    color: #ff9800;
+}
+
+.pink {
+    color: #e91e63;
+}
+
+.purple {
+    color: #9c27b0;
+}
+
+/* --- FLEXIBLE LAYOUTS --- */
+
+.col-2 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-2 > div {
+    flex: 1;
+}
+
+.col-2.fit-content {
+    justify-content: flex-start;
+}
+
+.col-2.fit-content div {
+    flex: 0;
+}
+
+.col-2.v-align {
+    align-items: center;
+}
+
+.col-2 > div.col-content {
+    padding: 30px 35px 30px 35px;
+}
+
+.col-2.autowrap > div {
+    min-width: 350px;
+}
+
+.col-2.autowrap-small > div {
+    min-width: 250px;
+}
+
+.col-2.givemeroom > div {
+    margin-bottom: 30px;
+}
+
+p.d-element {
+    margin: 0;
+}
+
+.space {
+    display: block;
+    height: 20px;
+}
+
+.space.big {
+    height: 50px
+}
+
+.nowrap {
+    white-space: nowrap;
+}
+
+.dark-back {
+    background: #191919;
+    color: #f5f5f5;
+}
+
+.light-back {
+    background: #f5f5f5;
+    color: #191919;
+}
+
+/* --- PER-PAGE LAYOUTS --- */
+
+/* ==== HOME SECTION ==== */
+
+#home {
+    background: url(../res/svg/hero_back.svg) repeat-y;
+    background-size: 1000px;
+    background-position: right center;
+}
+
+#home .subtle {
+    margin-top: 0;
+    font-size: 15px !important;
+    color: #868686 !important;
+}
+
+#home > .section-title {
+    background: #191919;
+}
 
 #home > .content {
     margin-left: 160px;
@@ -255,64 +398,8 @@ button.pink-red:active {
     color: #e0e0e0;
 }
 
-/* --- FLEXIBLE LAYOUTS --- */
-
-.col-2 {
-    display: flex; 
-}
-
-.col-2 > div {
-    flex: 1;
-}
-
-.col-2.fit-content {
-    justify-content: flex-start;
-}
-
-.col-2.fit-content div {
-    flex: 0;
-}
-
-.col-2.v-align {
-    align-items: center;
-}
-
-.col-2 > div:nth-child(2) {
+#home .col-2 > div:nth-child(2) {
     padding-left: 20px;
-}
-
-
-p.d-element {
-    margin: 0;
-}
-
-.space {
-    display: block;
-    height: 20px;
-}
-
-.nowrap {
-    white-space: nowrap;
-}
-
-/* --- PER-PAGE LAYOUTS --- */
-
-/* ==== HOME SECTION ==== */
-
-#home {
-    background: url(../res/svg/hero_back.svg) repeat-y;
-    background-size: 1000px;
-    background-position: right center;
-}
-
-#home .subtle {
-    margin-top: 0;
-    font-size: 15px !important;
-    color: #868686 !important;
-}
-
-#home > .section-title {
-    background: #191919;
 }
 
 .site-title {
@@ -349,10 +436,23 @@ p.d-element {
 
 #about {
     background: #f5f5f5;
+    color: #424242;
 }
 
 #about > .section-title > span {
     color: #424242;
+}
+
+#about > .inner-content {
+    height: 400px;
+}
+
+#about img {
+    width: 65%;
+}
+
+#logo-container {
+    text-align: center;
 }
 
 
