--- a/css/desktop.css
+++ b/css/desktop.css
@@ -146,6 +146,7 @@ section.full {
 
     z-index: 10;
     will-change: transform;
+    display: none;
 }
 
 .section-title > span {
@@ -281,6 +282,14 @@ button.pink-red:active {
     color: #9c27b0;
 }
 
+.black {
+    color: #424242;
+}
+
+.white {
+    color: #f5f5f5;
+}
+
 /* --- FLEXIBLE LAYOUTS --- */
 
 .col-2 {
@@ -324,6 +333,41 @@ p.d-element {
     margin: 0;
 }
 
+.large-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.large-grid > div {
+    flex: 0 auto;
+    
+    width: 600px;
+    height: 400px;
+    
+    border-radius: 20px;
+    
+    margin-left: 35px;
+    margin-right: 35px;
+    
+    box-shadow: 0px 15px 44px 0px rgba(51,51,51,0.47);
+    margin-bottom: 70px;
+    margin-top: 40px;
+    
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.large-grid > div > label {
+    font-size: 150px;
+    position: absolute;
+    margin-left: -15px;
+    margin-top: -65px;
+    color: #424242;
+    display: none;
+}
+
 .space {
     display: block;
     height: 20px;
@@ -345,6 +389,14 @@ p.d-element {
 .light-back {
     background: #f5f5f5;
     color: #191919;
+}
+
+section header {
+    padding: 40px 0 40px 0;
+    margin: 0;
+    font-weight: 300;
+    font-size: 30px;
+    text-align: center;
 }
 
 /* --- PER-PAGE LAYOUTS --- */
