--- a/css/mobile.css
+++ b/css/mobile.css
@@ -52,8 +52,10 @@
 
     #home > .content {
         margin-left: 0;
-        padding: 20px;
+        padding: 0 20px 20px 20px;
+        margin-bottom: 20px;
         margin-right: 0;
+        margin-top: 0;
         width: auto;
     }
     
