--- a/css/desktop.css
+++ b/css/desktop.css
@@ -139,14 +139,13 @@ section.full {
     top: 0;
     left: 10px;
     width: 63px;
-    height: 100vh;
+    height: 100%;
 
     position: absolute;
     display: block;
 
     z-index: 10;
     will-change: transform;
-    display: none;
 }
 
 .section-title > span {
@@ -336,19 +335,19 @@ p.d-element {
 .large-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .large-grid > div {
-    flex: 0 auto;
+    flex: 0 1 auto;
     
     width: 600px;
     height: 400px;
     
-    border-radius: 20px;
+    border-radius: 15px;
     
-    margin-left: 35px;
-    margin-right: 35px;
+    margin-left: 65px;
+    margin-right: 65px;
     
     box-shadow: 0px 15px 44px 0px rgba(51,51,51,0.47);
     margin-bottom: 70px;
@@ -505,6 +504,10 @@ section header {
 
 #logo-container {
     text-align: center;
+}
+
+#front-end > .section-title > span {
+    color: #424242;
 }
 
 
