--- a/css/desktop.css
+++ b/css/desktop.css
@@ -80,7 +80,7 @@ html, body {
 }
 
 .nav-title {
-    font-size: 13px;
+    font-size: 0.7em;
     letter-spacing: 5px;
     color: #9e9e9e;
 
@@ -127,8 +127,8 @@ html, body {
 /* --- PAGE SECIONS --- */
 
 section {
-    min-height: 10%;
     position: relative;
+    overflow: hidden;
 }
 
 section.full {
@@ -139,7 +139,7 @@ section.full {
     top: 0;
     left: 10px;
     width: 63px;
-    height: 100%;
+    height: 100vh;
 
     position: absolute;
     display: block;
@@ -160,7 +160,7 @@ section.full {
 
     font-family: "Futura", sans-serif;
     text-transform: uppercase;
-    font-size: 36px;
+    font-size: 2.2em;
     line-height: 1;
     transform: translateX(-50%) rotate(-90deg);
 }
@@ -184,11 +184,15 @@ section.full {
 h1 {
     margin: 0 0 12px 0;
     font-weight: 300;
-    font-size: 30px;
+    font-size: 2em;
+}
+
+p {
+    line-height: 1.5;
 }
 
 p.large {
-    font-size: 18px;
+    font-size: 1.2em;
 }
 
 p.dim {
@@ -216,7 +220,7 @@ button.ui-button {
     height: 40px;
     padding-top: 2px;
 
-    box-shadow: 0 2px 4px 0 #000000;
+    box-shadow: 1px 2px 6px -1px #121212;
     border-radius: 7px;
     border: none;
 
@@ -237,7 +241,7 @@ button.pink-red {
 button.pink-red:hover {
     background: linear-gradient(162deg, rgba(200, 81, 245, 0.9) 0%, rgba(159, 4, 27, 0.9) 100%);
     transition: all 0.2s ease;
-    box-shadow: 0 2px 10px 0 #000000;
+    box-shadow: 1px 2px 10px 0 #121212;
 }
 
 button.pink-red:active {
@@ -290,7 +294,7 @@ button.pink-red:active {
 }
 
 /* --- FLEXIBLE LAYOUTS --- */
-
+/*
 .col-2 {
     display: flex;
     flex-wrap: wrap;
@@ -327,9 +331,9 @@ button.pink-red:active {
 .col-2.givemeroom > div {
     margin-bottom: 30px;
 }
-
-p.d-element {
-    margin: 0;
+*/
+p.nospace {
+    margin: 0 !important;
 }
 
 .large-grid {
@@ -419,16 +423,20 @@ section header {
 }
 
 #home > .content {
-    margin-left: 160px;
-    margin-top: 110px;
+    margin-left: 180px;
+    margin-top: 170px;
     padding: 40px;
     width: 600px;
     background: #191919;
     transition: all 0.3s ease;
 }
 
-#home > .content h1 {
+#home p {
     margin: 0;
+}
+
+.hi {
+    margin: 0 0 0 -25px;
     font-weight: 400;
     font-size: 288px;
     background: linear-gradient(134deg, #0044FF 0%, #DD0000 100%);
@@ -436,15 +444,14 @@ section header {
     -webkit-text-fill-color: transparent;
     z-index: 0;
     display: inline-block;
-}
-
-#home > .content > .inner-content {
-    margin: -50px 0 0 25px;
+    line-height: 1;
 }
 
 #home > .content p {
     font-size: 22px;
     font-weight: lighter;
+    line-height: 1.4;
+    margin: 15px 0 10px 0;
     color: #e0e0e0;
 }
 
@@ -452,7 +459,7 @@ section header {
     padding-left: 20px;
 }
 
-.site-title {
+#site-title {
     font-family: "Futura";
     text-transform: uppercase;
     font-size: 42px;
@@ -470,7 +477,7 @@ section header {
     z-index: 99;
 }
 
-.site-title > span {
+#site-title > span {
     transform:  translateX(-50%) rotate(-90deg);
     color: #191919;
     position: absolute;
@@ -515,25 +522,25 @@ section header {
 
 @media screen and (max-height: 740px) {
     #home > .content {
-        margin-top: 10px !important;
+        margin-top: 60px !important;
         padding-top: 10px;
         transition: all 0.3s ease;
     }
 }
 
 @media screen and (max-height: 840px) {
-    .site-title {
+    #site-title {
         height: 440px;
     }
 
     #home > .content {
-        margin-top: 80px;
+        margin-top: 120px;
         transition: all 0.3s ease;
     }
 }
 
 @media screen and (max-width: 935px) {
-    .site-title {
+    #site-title {
         margin-right: 30px;
         transition: all 0.3s ease;
     }
