--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,6 +18,12 @@
     }
 }
 
+@media screen and (max-width: 850px) {
+    .section-title {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 537px) {
     #site-title {
         width: 100%;
@@ -39,6 +45,10 @@
         display: none;
     }
     
+    .full {
+        min-height: 0 !important;
+    }
+    
     #home {
         background: none;
     }
@@ -49,10 +59,6 @@
 
     #home > .content > .inner-content {
         margin: -50px 0 0 0;
-    }
-
-    .section-title {
-        display: none;
     }
 
     #home > .content {
