--- a/css/desktop.css
+++ b/css/desktop.css
@@ -89,8 +89,8 @@ html, body {
 }
 
 .menu-button {
-    top: 25px;
-    left: 25px;
+    top: 22px;
+    left: 20px;
 
     float: left;
     position: fixed;
@@ -101,7 +101,7 @@ html, body {
     border-radius: 31px;
     box-shadow: 1px 1px 13px 0 #000000;
 
-    background-image: linear-gradient(134deg, #3023AE 0%, #C86DD7 100%);
+    background-image: linear-gradient(134deg, #2196F3 0%, #4CAF50 100%);
     transition: all 0.7s ease;
 
     z-index: 100;
