--- a/css/desktop.css
+++ b/css/desktop.css
@@ -176,21 +176,6 @@ section.full {
     z-index: 999;
 }
 
-#branding > span > span {
-    font-weight: 300;
-    opacity: 0.5;
-}
-
-#branding.fixed {
-    position: fixed;
-    bottom: 0;
-}
-
-#branding.bottom {
-    top: auto;
-    bottom: 0;
-}
-
 /* --- CORE TYPEFACES / UI DEFAULT ELEMENTS --- */
 
 h1 {
@@ -343,41 +328,6 @@ p.nospace {
     margin: 0 !important;
 }
 
-.large-grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.large-grid > div {
-    flex: 0 1 auto;
-
-    width: 600px;
-    height: 400px;
-
-    border-radius: 15px;
-
-    margin-left: 65px;
-    margin-right: 65px;
-
-    box-shadow: 0px 15px 44px 0px rgba(51,51,51,0.47);
-    margin-bottom: 70px;
-    margin-top: 40px;
-
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.large-grid > div > label {
-    font-size: 150px;
-    position: absolute;
-    margin-left: -15px;
-    margin-top: -65px;
-    color: #424242;
-    display: none;
-}
-
 .space {
     display: block;
     height: 20px;
@@ -418,13 +368,12 @@ section header {
 /* ==== HOME SECTION ==== */
 
 #home {
-    background: url(../res/svg/hero_back.svg) repeat-y;
+    background: url(../assets/svg/hero_back.svg) repeat-y;
     background-size: 1000px;
     background-position: right center;
 }
 
 #home .subtle {
-    margin-top: 0;
     font-size: 15px !important;
     color: #868686 !important;
 }
@@ -437,11 +386,7 @@ section header {
     transition: all 0.3s ease;
 }
 
-#home p {
-    margin: 0;
-}
-
-.hi {
+#hi {
     margin: 0 0 0 -25px;
     font-weight: 400;
     font-size: 288px;
@@ -503,10 +448,13 @@ section header {
     margin-bottom: 20px;
 }
 
-#logo-container {
-    text-align: center;
+#profile {
+    background: #1a237e;
+    background-position: center center;
+    background-size: cover;
+    min-height: 414px;
+    flex: 0 0 100%;
 }
-
 
 /* --- LOCAL MEDIA QUERIES (HOME) --- */
 
