Add some front-end content

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -456,6 +456,46 @@ section header {
     flex: 0 0 100%;
 }
 
+/* === FRONT END SECTION === */
+
+#front-end {
+    padding-bottom: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+#front-end > .row {
+    margin-bottom: 20px;
+}
+
+.fe-box {
+    max-width: 600px;
+    position: relative;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    padding: 0;
+}
+
+.fe-image {
+    width: 600px;
+    height: 400px;
+    background-size: cover;
+    background-position: center center;
+    border-radius: 5px;
+}
+
+.fe-desc {
+    left: -50px;
+    bottom: -50px;
+    background: #191919;
+    color: #e0e0e0;
+    text-align: left;
+    padding: 20px;
+    width: 280px;
+    height: 180px;
+    position: absolute;
+}
+
 /* --- LOCAL MEDIA QUERIES (HOME) --- */
 
 @media screen and (max-height: 700px) {
