--- a/css/desktop.css
+++ b/css/desktop.css
@@ -7,7 +7,7 @@ html, body {
     width: 100%;
     height: 100%;
 
-    background: #191919;
+    background: #121212;
     color: #f5f5f5;
 
     font-family: "Futura-Medium", sans-serif;
@@ -184,8 +184,28 @@ h1 {
     font-size: 2em;
 }
 
+h1.xl {
+    font-size: 5em;
+}
+
 p {
     line-height: 1.5;
+}
+
+.bold {
+    font-family: "Futura-Bold";
+}
+
+.light {
+    font-family: "Futura-Light";
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.italic {
+    font-style: italic;
 }
 
 .large {
@@ -339,7 +359,7 @@ p.nospace {
 }
 
 .space.big {
-    height: 50px
+    height: 50px;
 }
 
 .padding {
@@ -351,13 +371,13 @@ p.nospace {
 }
 
 .dark-back {
-    background: #191919;
+    background: #121212;
     color: #f5f5f5;
 }
 
 .light-back {
     background: #f5f5f5;
-    color: #191919;
+    color: #121212;
 }
 
 section header {
@@ -387,7 +407,7 @@ section header {
     margin: 170px 0 20px 180px;
     padding: 40px;
     width: 600px;
-    background: #191919;
+    background: #121212;
     transition: all 0.3s ease;
 }
 
@@ -431,7 +451,7 @@ section header {
 
 #site-title > span {
     transform:  translateX(-50%) rotate(-90deg);
-    color: #191919;
+    color: #121212;
     position: absolute;
     display: block;
     bottom: 170px;
@@ -469,39 +489,31 @@ section header {
     padding-right: 50px;
 }
 
-#front-end > .row {
-    margin-bottom: 20px;
-}
-
-.fe-box {
-    max-width: 600px;
-    position: relative;
-    margin-left: 50px;
-    margin-bottom: 50px;
-    padding: 0;
-}
-
-.fe-image {
-    width: 600px;
-    height: 400px;
-    background-size: cover;
-    background-position: center center;
+#front-end img {
+    width: 100%;
     border-radius: 5px;
-    box-shadow: 0px 6px 33px -6px rgba(0,0,0,0.75);
+    box-shadow: 0 3px 25px 1px rgba(0, 0, 0, 0.7);
 }
 
-.fe-desc {
-    left: -50px;
-    bottom: -50px;
-    background: #191919;
-    color: #e0e0e0;
-    text-align: left;
-    padding: 20px;
-    width: 280px;
-    height: 150px;
-    position: absolute;
-    box-shadow: 0px 6px 33px -6px rgba(0,0,0,0.75);
+#front-end > .row > div {
+    margin-bottom: 40px;
 }
+
+.fe-desc-right {
+    border-left: 1px solid #aa00ff;
+    padding: 20px 0 20px 40px;
+}
+
+.fe-desc-left {
+    border-right: 1px solid #aa00ff;
+    padding: 20px 40px 20px 0;
+    text-align: right;
+}
+
+.outline-box {
+    
+}
+
 
 /* --- LOCAL MEDIA QUERIES (HOME) --- */
 
