--- a/css/desktop.css
+++ b/css/desktop.css
@@ -196,6 +196,10 @@ p {
     font-family: "Futura-Bold";
 }
 
+.regular {
+    font-family: "Futura-Medium";
+}
+
 .light {
     font-family: "Futura-Light";
 }
@@ -248,8 +252,13 @@ a {
     transition: all 0.2s ease;
 }
 
-a:hover {
+.dark-back a:hover {
     color: #ffffff;
+    transition: all 0.2s ease;
+}
+
+.light-back a:hover {
+    color: #0d47a1;
     transition: all 0.2s ease;
 }
 
@@ -525,10 +534,60 @@ section header {
 
 /* === CINE SECTION === */
 
-.cine {
+#cine {
     padding-bottom: 100px;
     padding-left: 50px;
     padding-right: 50px;
+}
+
+.col-video {
+    flex: 0 0 100%;
+}
+
+.intrinsic-container {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+}
+
+/* 16x9 Aspect Ratio */
+.intrinsic-container-16x9 {
+    padding-bottom: 56.25%;
+}
+
+/* 4x3 Aspect Ratio */
+.intrinsic-container-4x3 {
+    padding-bottom: 75%;
+}
+
+.intrinsic-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#cine > .row > div {
+    margin-bottom: 40px;
+}
+
+.c-title {
+    height: 55px;
+}
+
+.c-title-large {
+    height: 90px;
+}
+
+.c-desc-left {
+    text-align: left;
+    padding-left: 40px;
+}
+
+.c-desc-right {
+    text-align: right;
+    padding-right: 40px;
 }
 
 
