--- a/css/desktop.css
+++ b/css/desktop.css
@@ -90,6 +90,23 @@ html, body {
     }
 }
 
+#incompatible-ie {
+    display: none;
+    
+    position: fixed;
+    pointer-events: none;
+    
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    
+    margin: 0 auto;
+    
+    background: url('../assets/img/old-ie.png') no-repeat center;
+    background-size: 500px;
+}
+
 /* --- SIDE MENU --- */
 
 .slide-menu {
@@ -220,6 +237,12 @@ section {
 
 section.full {
     min-height: 100%;
+}
+
+footer {
+    text-align: center;
+    font-size: 0.9em;
+    padding-bottom: 60px;
 }
 
 #branding {
@@ -609,7 +632,7 @@ section header {
 /* === CINE SECTION === */
 
 #cine {
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     padding-left: 50px;
     padding-right: 50px;
 }
